--- a/online-zoo/css/zoos.css
+++ b/online-zoo/css/zoos.css
@@ -1359,6 +1359,17 @@ html {
  *  FOOTER
  * ----------------------------------------------------------------------------
  */
+@media screen and (max-width: 768px) {
+  .footer__form {
+    margin-top: 0 !important;
+  }
+}
+
+/**
+ * ----------------------------------------------------------------------------
+ *  FOOTER
+ * ----------------------------------------------------------------------------
+ */
 .footer {
   padding: 7.14286rem 1.42857rem 5.14286rem;
   background-color: #333;
