--- a/online-zoo/scss/layout/_page-map.scss
+++ b/online-zoo/scss/layout/_page-map.scss
@@ -361,3 +361,15 @@
     height: rem(35, $text-size);
   }
 }
+
+/**
+ * ----------------------------------------------------------------------------
+ *  FOOTER
+ * ----------------------------------------------------------------------------
+ */
+
+.footer__form {
+  @include at($max, $tablet) {
+    margin-top: 0 !important;
+  }
+}
