--- a/online-zoo/scss/layout/_page-zoos.scss
+++ b/online-zoo/scss/layout/_page-zoos.scss
@@ -400,3 +400,15 @@
     min-width: rem(185, $text-size);
   }
 }
+
+/**
+ * ----------------------------------------------------------------------------
+ *  FOOTER
+ * ----------------------------------------------------------------------------
+ */
+
+.footer__form {
+  @include at($max, $tablet) {
+    margin-top: 0 !important;
+  }
+}
